testing cableready broadcast with jobs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <%= link_to 'exercices', exercices_path %>
+     | 
+    <%= link_to 'submissions',submissions_path %>
+     | 
+    <%= link_to 'submission_tests', submission_tests_path %>
+     | 
+    <%= link_to 'tests', tests_path %>
+    <br>
     <%= yield %>
   </body>
 </html>
